--- a/Insuranceclaim/Views/Policyholder/AvailablePolicies.cshtml
+++ b/Insuranceclaim/Views/Policyholder/AvailablePolicies.cshtml
@@ -221,6 +221,10 @@
                                     {
                                     <button class="btn btn-already-enrolled w-100">@policy.PolicyStatus</button>
                                     }
+                                    else if (policy.PolicyStatus == "CANCELLED")
+                                    {
+                                        <button class="btn btn-already-enrolled w-100">@policy.PolicyStatus</button>
+                                    }
                                     else
                                     {
                                         <button type="button" class="btn btn-enroll w-100"
