--- a/Insuranceclaim/Views/Shared/_PolicyholderLayout.cshtml
+++ b/Insuranceclaim/Views/Shared/_PolicyholderLayout.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +13,6 @@
     <link rel="stylesheet" href="~/css/policyholder.css" />
 </head>
 <body>
-
     <header class="navbar navbar-expand-md border-bottom shadow-sm">
         <div class="container-fluid">
             <!-- Logo Section -->
