--- a/Insuranceclaim/wwwroot/css/site.css
+++ b/Insuranceclaim/wwwroot/css/site.css
@@ -404,9 +404,9 @@ body {
         background-color: transparent !important; /* Ensure it stays transparent */
     }
 
-.btn {
+/*.btn {
         background-color: #012347;
-}
+}*/
 
 .btn-login {
     background-color: #012347;
