--- a/Insuranceclaim/Views/Admin/AdminClaims/Index.cshtml
+++ b/Insuranceclaim/Views/Admin/AdminClaims/Index.cshtml
@@ -205,7 +205,7 @@
 
                 // Check the claim status and adjust the modal UI
 
-                if (claimData.status === 'Approved' || claimData.status === 'Rejected') {
+                if (claimData.status === 'Approved' || claimData.status === 'Rejected' || claimData.status === 'Cancelled'){
 
                     // Show read-only admin notes and hide the form fields
 
