--- a/Insuranceclaim/Views/Shared/_Layout.cshtml
+++ b/Insuranceclaim/Views/Shared/_Layout.cshtml
@@ -11,7 +11,8 @@
 
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <span class="navbar-brand logo">🧠 The Healthy Mind</span>
+            <img src="https://cdn-icons-png.flaticon.com/128/2966/2966486.png" style="width:30px; height:30px" />&nbsp; &nbsp;
+            <span class="navbar-brand logo">The Healthy Mind</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon text-white"></span>
             </button>
